--- a/_publications/ListaPubblicazioni.bib
+++ b/_publications/ListaPubblicazioni.bib
@@ -1,6 +1,6 @@
 @article{bertoni2012size,
   title={Size constrained distance clustering: separation properties and some complexity results},
-  author={Bertoni, Alberto and Goldwurm, Massimiliano and Lin, Jianyi and Sacc{\`a}, Francesco},
+  author={Bertoni, Alberto and Goldwurm, Massimiliano and Lin, Jianyi and Sacca, Francesco},
   journal={Fundamenta Informaticae},
   volume={115},
   number={1},
@@ -86,12 +86,6 @@
   pages={128--139},
   year={2015},
   organization={Springer, Berlin, Heidelberg}
-}
-
-@article{lin2009choice,
-  title={A choice for the third point in the Miller-Tate’s Algorithm},
-  author={Lin, Jianyi},
-  year={2009}
 }
 
 @article{adamo2015robust,
@@ -203,8 +197,9 @@
   journal={PloS one},
   volume={12},
   number={1},
+  pages={e0169663},
   year={2017},
-  publisher={Public Library of Science}
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
 @inproceedings{kunze2017ifsm,
@@ -250,14 +245,6 @@
   organization={Springer, Cham}
 }
 
-@article{grossi1orthogonal,
-  title={Orthogonal Procrustes analysis for dictionary learning in sparse representation},
-  author={Grossi, Giuliano and Lanzarotti, Raffaella and Lin, Jianyi},
-  journal={Rn},
-  volume={1},
-  pages={1}
-}
-
 @inproceedings{goldwurm2018local,
   title={A local limit property for pattern statistics in bicomponent stochastic models},
   author={Goldwurm, Massimiliano and Lin, Jianyi and Vignati, Marco},
@@ -293,13 +280,6 @@
   year={2016}
 }
 
-@article{franceschini2013string,
-  title={STRING v9. 1},
-  author={Franceschini, A and Simonovic, M and Roth, A and Von Mering, C and Szklarczyk, D and Pletscher-Frankild, Sune and Jensen, LJ and Kuhn, Melanie Michelsen and Lin, J and Minguez, P and others},
-  journal={Nucleic Acids Research},
-  year={2013}
-}
-
 @inproceedings{conte2019parallel,
   title={A parallel MCMC algorithm for the Balanced Graph Coloring problem},
   author={Conte, Donatello and Grossi, Giuliano and Lanzarotti, Raffaella and Lin, Jianyi and Petrini, Alessandro},
@@ -309,14 +289,18 @@
   organization={Springer, Cham}
 }
 
-@article{goldwurm2019saddle,
-  title={Saddle Point Method in the Analysis of Pattern Statistics for Regular Languages⋆},
-  author={Goldwurm, M and Lin, J and Vignati, M},
-  year={2019}
+@inproceedings{goldwurm2019saddle,
+  title={Saddle Point Method in the analysis of pattern statistics for regular languages},
+  author={Goldwurm, Massimiliano and Jianyi, L and Vignati, Marco},
+  booktitle={Italian Conference on Theoretical Computer Science},
+  volume={2504},
+  pages={78--90},
+  year={2019},
+  organization={CEUR Workshop Proceedings}
 }
 
 @inproceedings{goldwurm2019analysis,
-  title={Analysis of Symbol Statistics in Bicomponent Rational Models},
+  title={Analysis of symbol statistics in bicomponent rational models},
   author={Goldwurm, Massimiliano and Lin, Jianyi and Vignati, Marco},
   booktitle={International Conference on Developments in Language Theory},
   pages={306--318},
@@ -329,12 +313,59 @@
   author={Bertoni, Alberto and Goldwurm, Massimiliano and Lin, Jianyi and Sacca, Francesco}
 }
 
-@article{zippo2019short,
-  title={Short-Term Classification Learning Promotes Rapid Global Improvements of Information Processing in Human Brain Functional Connectome},
+@article{zippo2020short,
+  title={Short-term classification learning promotes rapid global improvements of information processing in human brain functional connectome},
   author={Zippo, Antonio G and Castiglioni, Isabella and Lin, Jianyi and Borsa, Virginia M and Valente, Maurizio and Biella, Gabriele EM},
-  journal={Frontiers in Human Neuroscience},
+  journal={Frontiers in human neuroscience},
   volume={13},
   pages={462},
-  year={2019},
+  year={2020},
   publisher={Frontiers}
+}
+
+@article{lin2020sparse,
+  title={Sparse logistic maximum likelihood estimation for optimal well-being determinants},
+  author={Lin, Jianyi and Sironi, Emiliano},
+  journal={IEEE Transactions on Emerging Topics in Computing},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{lin2020vertex,
+  title={A Vertex-centric Markov Chain Algorithm for Network Clustering based on b-Coloring},
+  author={Lin, Jianyi and Mio, Corrado},
+  booktitle={Proceedings of the 16th ACM Symposium on QoS and Security for Wireless and Mobile Networks},
+  pages={89--93},
+  year={2020}
+}
+
+@inproceedings{gianini2020hybrid,
+  title={Hybrid Inspector-Inspectee-Agent Games in Mobile Cloud Computing},
+  author={Gianini, Gabriele and Viola, Francesco and Lena-Cota, Guido and Lin, Jianyi},
+  booktitle={Proceedings of the 16th ACM Symposium on QoS and Security for Wireless and Mobile Networks},
+  pages={95--100},
+  year={2020}
+}
+
+@inproceedings{gianini2020selection,
+  title={Selection of Information Streams in Social Sensing: an Interdependence-and Cost-aware Ranking Method},
+  author={Gianini, Gabriele and Mio, Corrado and Viola, Francesco and Lin, Jianyi and Almoosa, Nawaf},
+  booktitle={Proceedings of the 12th International Conference on Management of Digital EcoSystems},
+  pages={157--161},
+  year={2020}
+}
+
+@article{goldwurm2021local,
+  title={Local limit laws for symbol statistics in bicomponent rational models},
+  author={Goldwurm, Massimiliano and Lin, Jianyi and Vignati, Marco},
+  journal={arXiv preprint arXiv:2102.09478},
+  year={2021}
+}
+
+@article{conte2021analysis,
+  title={Analysis of a parallel MCMC algorithm for graph coloring with nearly uniform balancing},
+  author={Conte, Donatello and Grossi, Giuliano and Lanzarotti, Raffaella and Lin, Jianyi and Petrini, Alessandro},
+  journal={Pattern Recognition Letters},
+  year={2021},
+  publisher={Elsevier}
 }
